Adding the attendance track

--- a/src/facultydashboard.html
+++ b/src/facultydashboard.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="#home">Home Page</a></li>
             <li><a href="#timetable">Time Table</a></li>
-            <li><a href="#attendance">Attendance Track</a></li>
+            <li><a href="attendance.html">Attendance Track</a></li>
             <li><a href="qr.html" id="generate-qr">Generate QR</a></li>
         </ul>
     </nav>
