--- a/src/studentdashboard.html
+++ b/src/studentdashboard.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="#home">Home Page</a></li>
             <li><a href="#timetable">Time Table</a></li>
-            <li><a href="#attendance">Attendance Track</a></li>
+            <li><a href="studentAttendance.html">Attendance Track</a></li>
             <li><a href="#" id="scanqr">Scan QR</a></li>
         </ul>
     </nav>
