--- a/public/qr.html
+++ b/public/qr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QR Code</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../assets/css/form.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
 
         <button id="generateButton">Generate QR</button>
     </div>
-    <script src="qr.js"></script>
+    <script src="../assets/js/qr.js"></script>
 </body>
 </html>
