--- a/src/form.html
+++ b/src/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../assets/css/form.css">
 </head>
 <body>
     <div id="main-container" class="container">
@@ -50,23 +50,9 @@
         </form>
     </div>
 
-    <nav id="navbar" class="navbar navbar-expand-md navbar-light bg-light hidden fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Dashboard</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul id="nav-items" class="navbar-nav">
-                    <!-- Nav items will be inserted here dynamically -->
-                </ul>
-            </div>
-        </div>
-    </nav>    
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBogGzq57puWbQja8a9fX1pjRiqGy9nljAz1Ydi5PmMOe6B4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-pprn3073KE6tl6LrD6M8GkaXN7U6wr8+5hb5g7e5e5hgFoQmMmfw5Zl+O8z1p24/" crossorigin="anonymous"></script>
-    <script src="form.js"></script>
+    <script src="../assets/js/form.js"></script>
 </body>
 </html>
